--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+
+# Ignore build results
+target
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore Eclipse artifacts
+.classpath
+.project
+.settings
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Ignore Operating System artifacts
+.DS_Store
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
